change default math rendering method

--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -1,5 +1,7 @@
 ---
-output: html_document
+output: 
+  html_document: 
+    math_method: katex
 ---
 
 ```{r}
@@ -62,14 +64,14 @@ We use the following procedure to determine $t_{\text{motion}}$ for each play.
 The observed timing between motion and snap on a single play is surely attributable to numerous variables---from contextual and tracking features, to the players and team involved.
 To this end, we fit the following multilevel model:
 
-\begin{align}
+\begin{align*}
   \delta_i  &\sim \textsf{Gamma}(\mu_i, \phi_i) \\
   \log \phi_i &=\alpha_{q[i]} \\
   \log \mu_i &=\alpha_{q[i],m[i],d[i]} + \boldsymbol{\beta X_i} \\
   \alpha_q  &\sim \textsf{Normal}(\mu_{\alpha_q}, \sigma^2_{\alpha_q}) && \textrm{ for quarterback } q = 1, \dots, Q \\
   \alpha_m  &\sim \textsf{Normal}(\mu_{\alpha_m}, \sigma^2_{\alpha_m}) && \textrm{ for motion player } m = 1, \dots, M \\
   \alpha_d  &\sim \textsf{Normal}(\mu_{\alpha_d}, \sigma^2_{\alpha_d}) && \textrm{ for defensive team } d = 1, \dots, D \\
-\end{align}
+\end{align*}
 
 In detail, we use a Gamma distribution to model the response $\delta_i$ (motion-to-snap timing for play $i$).
 The Gamma distribution is well-suited for modeling a positive, continuous variable like the motion-to-snap timing in our case.
