--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -37,10 +37,10 @@ low var -> higher sack/havoc rate -> more vulnerable
 low var: easier to predict when the snap will be
 
 
-# Defining motion-to-snap timing
+# Defining snap timing
 
-We define the motion-to-snap timing $\delta$ for a play as the number of frames elapsed between the start of motion $(t_{\text{motion}})$ and the ball snap $(t_{\text{snap}})$.
-That is, $$\delta = t_{\text{snap}} - t_{\text{motion}}\,.$$ 
+We define the snap timing $\delta$ for a play as the number of frames elapsed between the start of motion $(t_{\text{motion}})$ and the ball snap $(t_{\text{snap}})$.
+That is,$$\delta = t_{\text{snap}} - t_{\text{motion}}\,.$$ 
 Note that in our analysis, we only consider plays with players in motion at snap and running a route.
 
 Here, it is straightforward to obtain $t_{\text{snap}}$ for each play using frame label in the tracking data.
@@ -73,7 +73,7 @@ To this end, we fit the following multilevel model:
   \alpha_d  &\sim \textsf{Normal}(\mu_{\alpha_d}, \sigma^2_{\alpha_d}) && \small{\textrm{for defensive team}} &d &= 1, \dots, D \\
 \end{align*}
 
-In detail, we model the response $\delta_i > 0$ (motion-to-snap timing for play $i$) with a Gamma distribution, which is well-suited for a positive, continuous  like our case.
+In detail, we model the response $\delta_i > 0$ (snap timing for play $i$) with a Gamma distribution, which is well-suited for a positive, continuous  like our case.
 
 We model the $\phi$ parameter, which represents the shape/variance of the distribution, with QB random effects.
 This allows us to examine the variability in timing among QBs.
@@ -133,7 +133,7 @@ Here, a havoc event is defined as whether any of the following outcomes are gene
 The figure below is a scatterplot of the posterior mean and havoc rate for all passing plays (left) and only the considered motion plays (right) during the first nine weeks of the 2022 NFL regular season.
 
 We observe a moderately strong, negative correlation between the quantities.
-Thus, lower variability in motion-to-snap timing corresponds to higher rate of facing disruptive events created by the opposing defense.
+Thus, lower variability in snap timing corresponds to higher rate of facing disruptive events created by the opposing defense.
 
 
 ```{r}
@@ -158,7 +158,7 @@ We have introduced...
 
 
 
-Our approach is not without limitations, leaving potential avenues for future work.
+This work is not without limitations, leaving potential avenues for future work.
 To identify the start of motion, we use a threshold-based criterion which relies only a fraction of a player's top speed prior to the snap.
 This is certainly a simple viewpoint, as one could come up with a more rigid definition by building a model to predict the starting motion frame.
 There may also be room for improvement in clustering the motion types by having more refined features (e.g., [[TODO: what are these? (Ron, what were the things we talked about)]]), or alternatively using a functional clustering approach.
