--- a/kaggle/submission.Rmd
+++ b/kaggle/submission.Rmd
@@ -16,16 +16,15 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-Consider the following two passing plays by Chiefs QB Patrick Mahomes in the 2022 NFL regular season.
-The first play was a short pass to M. Valdes-Scantling for a first down against the Colts in week 3.
-The second play was a TD pass to J.Smith-Schuster against the 49ers in week 7.
-
-[[TODO: add more about these plays]]
-
-In both of these plays, KC uses the same type of motion---glide, as the motion player (highlighted in gold) lines up in an outside wide alignment, and then starts motioning towards the inside, and the ball is snapped when the player is about halfway to the center.
+Consider the following two pass plays by Kansas City Chiefs QB Patrick Mahomes in the 2022 NFL regular season.
+The first is a 9-yard pass to WR Marquez Valdes-Scantling for a first down in the second quarter of Colts vs Chiefs in week 3.
+The second is a 45-yard TD pass to WR JuJu Smith-Schuster in the fourth quarter against the 49ers in week 7.
+In both plays, KC uses the same type of motion---glide, as the motion player (highlighted in gold) lines up in an outside wide alignment, then motions toward the inside, and the football is snapped when the player is about halfway to the center.
 
 But these two plays differ in the time between start of motion and ball snap.
-In the first play, the snap happens 3.6 seconds after the motion begins, whereas for the second, the snap occurs within a half second of the motion.
+In the first play, the snap happens ~4 seconds after the motion from Travis Kelce begins, whereas in the second, the snap occurs within a half second of the motion from Mecole Hardman.
+
+[[TODO: insert animations]]
 
 In this work, we focus on evaluating a passer's ability to react and adapt to different variability in timing.
 
@@ -69,9 +68,11 @@ We use the following procedure to determine $t_{\text{motion}}$ for each play.
     *   We then choose the average ratio value of 0.45 as the threshold for determining the start of motion for the remaining plays. Accordingly, we assign $t_{\text{motion}}$ as the first frame between line-set and snap where the player reaches at least 45% of their top speed.
 
 
-# Model
+# Multilevel model for snap timing
 
 <!-- (based on EDA) -->
+
+## Model specification
 
 The observed timing between motion and snap on a single play is surely attributable to numerous variables---from contextual and tracking features, to the players and team involved.
 To this end, we fit the following multilevel model:
@@ -95,9 +96,12 @@ For the mean parameter $\mu$, the model consists of random intercepts for the qu
 We also account for features about play $i$ through $\boldsymbol{X_i}$, and estimate the coefficients $\boldsymbol \beta$ as fixed effects.
 Specifically, we control for contextual information such as the current down, number of timeouts remaining for the offense, and play clock at the start of motion, as these variables can impact the timing between motion and snap.
 We also account for the motion player's position (WR, TE, RB/FB) and the number of players in motion since line-set, as these personnel information can relate to low/high variability in timing.
-
 Another feature that should be crucially important for modeling timing is the type of motion.
-This information, however, is not included in the original data, prompting us to consider a Gaussian mixture model to cluster the motion types.
+This information, however, is not included in the original data, prompting us to perform a cluster analysis of the motion.
+
+## Model-based clustering of motion types
+
+We use a Gaussian mixture model to identify the motion types.
 Our clustering input consists of tracking data features related to the motion player's location at different events relative to the ball-snapper's location before the snap.
 In particular, we compute the absolute difference in both horizontal (endzone) and vertical (sideline) directions between the motion player at the moment of snap and the center.
 We also include the vertical displacement between the ball-snapper at line-set and the motion player at the start of motion and when they cross the line of scrimmage (LOS).
@@ -112,18 +116,18 @@ This should provide a reasonable starting point for identifying the different ty
 
 The focus of our approach is not in designing the best clustering algorithm; something reasonable should be enough. (verified with visual inspection...)
 
-[[TODO: mention limitations in discussion - DONE]]
+[[TODO: mention limitations in discussion]]
 
 <!-- 
 a finite mixture of 7 ellipsoidal multivariate Gaussian distributions with varying volume, shape, and orientation (VVV model)
 Once the clusters are identified, we can the label the motion types to add more context to our cluster assignments.
 -->
 
+# Analysis
+
 Our model is fitted in a Bayesian framework via the `brms` `R` package using 4 parallel chains, each having 10,000 iterations and 5,000 burn-in draws.
 We perform diagnostics by computing the $\widehat R$ and effective sample size statistics and find no issues regarding model convergence and efficiency, respectively.
-Ultimately, we obtain the posterior distributions for our model parameters, and we analyze them in the following section.
-
-# Analysis
+Ultimately, we obtain the posterior distributions for our model parameters and perform the following analysis.
 
 Of primary interest, we focus on the shape/variance parameter in our model.
 The following figure displays the posterior distributions for the QB random intercept (ordered by posterior means) for those with at least 50 pass attempts across the considered plays.
